updated folders and organise files

--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Earth Demo with Cities</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
-    <div id="city-markers-container"></div>
-    <div id="city-overlay">
-        <button id="overlay-close">&times;</button>
-        <h2 id="city-title">City Name</h2>
-        <div id="city-info">City information will appear here...</div>
-        <button id="learn-more-btn">Find Out More</button>
-    </div>
-    <script type="module" src="script.js"></script>
+    <section id="hero">
+        <div class="hero-content">
+            <h1>Explore Our World</h1>
+            <p>Discover amazing cities and landmarks across the globe in this interactive 3D experience</p>
+            <button id="explore-btn">Start Exploring</button>
+        </div>
+    </section>
+    
+    <section id="globe-section">
+        <canvas id="canvas"></canvas>
+        <div id="city-markers-container"></div>
+        <div id="city-overlay">
+            <button id="overlay-close">&times;</button>
+            <h2 id="city-title">City Name</h2>
+            <div id="city-info">City information will appear here...</div>
+            <button id="learn-more-btn">Find Out More</button>
+        </div>
+    </section>
+    <script type="module" src="src/script.js"></script>
 </body>
 </html>
