nume modificat la css pt layout ul la paginile cu businessuri

--- a/businessOffersCluj.html
+++ b/businessOffersCluj.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cluj-Napoca Local Rewards</title>
-  <link rel="stylesheet" href="style/businessOffersCluj-pinterest.css">
+  <link rel="stylesheet" href="style/businessOffers.css">
 </head>
 <body>
   <div id="offers-container">
