am schimbat numele

--- a/cluj.html
+++ b/cluj.html
@@ -11,6 +11,6 @@
     <h1>Local Rewards in Cluj-Napoca</h1>
     <div id="business-grid"></div>
   </div>
-  <script type="module" src="src/businessOffersCluj.js"></script>
+  <script type="module" src="src/cluj.js"></script>
 </body>
 </html>
