carusel pt oferte

--- a/cluj.html
+++ b/cluj.html
@@ -11,6 +11,20 @@
     <h1>Local Rewards in Cluj-Napoca</h1>
     <div id="business-grid"></div>
   </div>
+
+  <!-- Modal (required for popup to work) -->
+  <div id="offer-modal">
+    <div class="modal-content">
+      <span id="modal-close">&times;</span>
+      <h2 id="modal-title"></h2>
+      <div id="carousel-wrapper">
+        <div id="modal-offers-carousel"></div>
+      </div>
+    </div>
+  </div>
+  
+  
+
   <script type="module" src="src/cluj.js"></script>
 </body>
 </html>
