am scos si modificat navbar ul

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,9 +23,6 @@
                     <a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trips"><i class="fas fa-route"></i> <span>My Trips</span></a>
-                </li>
-                <li>
                     <a href="#"><i class="fas fa-gift"></i> <span>Rewards</span></a>
                   </li>
                   
@@ -33,7 +30,7 @@
                     <a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Trip Planner</span></a>
+                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
                 </li>
                 <li>
                     <a href="dashboard.html#settings"><i class="fas fa-cog"></i> <span>Settings</span></a>
