--- a/health.html
+++ b/health.html
@@ -23,16 +23,13 @@
                     <a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trips"><i class="fas fa-route"></i> <span>My Trips</span></a>
-                </li>
-                <li>
                     <a href="dashboard.html#rewards"><i class="fas fa-gift"></i> <span>Rewards</span></a>
                 </li>
                 <li class="active">
                     <a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Trip Planner</span></a>
+                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
                 </li>
                 <li>
                     <a href="dashboard.html#settings"><i class="fas fa-cog"></i> <span>Settings</span></a>
