modified dashboard with health goals

--- a/dashboard.html
+++ b/dashboard.html
@@ -142,19 +142,18 @@
             <!-- Main Dashboard Grid -->
             <div class="dashboard-grid">
                 <!-- Activity Chart -->
-                <section class="dashboard-card activity-chart">
-                    <div class="card-header">
-                        <h2>Your Activity</h2>
-                        <div class="card-actions">
-                            <button class="btn-sm">Week</button>
-                            <button class="btn-sm active">Month</button>
-                            <button class="btn-sm">Year</button>
+                <section class="dashboard-card goal-reminders">
+                    <div class="dashboard-card health-status">
+                        <div class="card-header">
+                          <h2>Today’s Health Goals</h2>
                         </div>
-                    </div>
-                    <div class="card-body">
-                        <canvas id="activityChart"></canvas>
-                    </div>
+                        <div class="card-body">
+                          <p>Loading your goal progress</p>
+                        </div>
+                      </div>
+                      
                 </section>
+                
 
                 <!-- Health Connect -->
                 <section class="dashboard-card health-status">
