am adaugat niste poze

--- a/dashboard.html
+++ b/dashboard.html
@@ -229,7 +229,7 @@
     <div class="card-body">
       <div class="challenges-carousel">
         <div class="challenge-card">
-          <img src="https://placehold.co/80x80/e9f5db/1b4332?text=Run&font=poppins" alt="Running">
+          <img src="images/cluj_running_club.jpeg" alt="Running">
           <div class="challenge-info">
             <h4>5K Run</h4>
             <p>Complete a 5K run and earn</p>
@@ -237,7 +237,7 @@
           </div>
         </div>
         <div class="challenge-card">
-          <img src="https://placehold.co/80x80/e9f5db/1b4332?text=Hike&font=poppins" alt="Hiking">
+          <img src="images/hike_cluj.jpeg" alt="Hiking">
           <div class="challenge-info">
             <h4>Nature Hike</h4>
             <p>Hike 8 km in one session</p>
@@ -245,10 +245,10 @@
           </div>
         </div>
         <div class="challenge-card">
-          <img src="https://placehold.co/80x80/e9f5db/1b4332?text=Steps&font=poppins" alt="Steps">
+          <img src="images/puupy_yoga.jpeg" alt="Steps">
           <div class="challenge-info">
-            <h4>10,000 Steps</h4>
-            <p>Reach your step goal daily</p>
+            <h4>Puppy Yoga</h4>
+            <p>Take a yoga lesson with puppies</p>
             <span class="points">+75 pts</span>
           </div>
         </div>
