--- a/cluj.html
+++ b/cluj.html
@@ -21,10 +21,9 @@
     <div class="sidebar-menu">
       <ul>
         <li><a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a></li>
-        <li class="active"><a href="#"><i class="fas fa-gift"></i> <span>Rewards</span></a></li>
-        <li><a href="#"><i class="fas fa-heart"></i> <span>Health</span></a></li>
-        <li><a href="#"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a></li>
-        <li><a href="#"><i class="fas fa-cog"></i> <span>Settings</span></a></li>
+        <li class="active"><a href="cluj.html"><i class="fas fa-gift"></i> <span>Rewards</span></a></li>
+        <li><a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a></li>
+        <li><a href="globe.html"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a></li>
       </ul>
     </div>
     <div class="sidebar-footer">
