--- a/dashboard.html
+++ b/dashboard.html
@@ -23,17 +23,13 @@
                     <a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-gift"></i> <span>Rewards</span></a>
-                  </li>
-                  
+                    <a href="cluj.html"><i class="fas fa-gift"></i> <span>Rewards</span></a>
+                </li>
                 <li>
                     <a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
-                </li>
-                <li>
-                    <a href="dashboard.html#settings"><i class="fas fa-cog"></i> <span>Settings</span></a>
+                    <a href="globe.html"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
                 </li>
             </ul>
         </div>
@@ -145,7 +141,7 @@
                 <section class="dashboard-card goal-reminders">
                     <div class="dashboard-card health-status">
                         <div class="card-header">
-                          <h2>Today’s Health Goals</h2>
+                          <h2>Today's Health Goals</h2>
                         </div>
                         <div class="card-body">
                           <p>Loading your goal progress</p>
