--- a/health.html
+++ b/health.html
@@ -23,16 +23,13 @@
                     <a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#rewards"><i class="fas fa-gift"></i> <span>Rewards</span></a>
+                    <a href="cluj.html"><i class="fas fa-gift"></i> <span>Rewards</span></a>
                 </li>
                 <li class="active">
                     <a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a>
                 </li>
                 <li>
-                    <a href="dashboard.html#trip-planner"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
-                </li>
-                <li>
-                    <a href="dashboard.html#settings"><i class="fas fa-cog"></i> <span>Settings</span></a>
+                    <a href="globe.html"><i class="fas fa-map-marked-alt"></i> <span>Discover other cities</span></a>
                 </li>
             </ul>
         </div>
@@ -78,7 +75,7 @@
                 </div>
                 <div class="date-picker">
                     <button class="icon-btn"><i class="fas fa-calendar-alt"></i></button>
-                    <span>July 3 - July 9, 2023</span>
+                    <span>March 6 - April 6, 2023</span>
                 </div>
             </section>
 
@@ -96,12 +93,17 @@
                         <button class="btn btn-primary">Connect Device</button>
                     </div>
                 </div>
-                <div class="supported-devices">
-                    <span>Supported: </span>
-                    <img src="assets/apple-health.png" alt="Apple Health" title="Apple Health">
-                    <img src="assets/google-fit.png" alt="Google Fit" title="Google Fit">
-                    <img src="assets/fitbit.png" alt="Fitbit" title="Fitbit">
-                    <img src="assets/garmin.png" alt="Garmin" title="Garmin">
+                <div class="device-support">
+                    <div class="currently-supported">
+                        <span>Currently Supported: </span>
+                        <img src="assets/google-fit.png" alt="Google Fit" title="Google Fit" class="supported">
+                    </div>
+                    <div class="future-support">
+                        <span>Coming Soon: </span>
+                        <img src="assets/apple-health.png" alt="Apple Health" title="Apple Health" class="coming-soon">
+                        <img src="assets/fitbit.png" alt="Fitbit" title="Fitbit" class="coming-soon">
+                        <img src="assets/garmin.png" alt="Garmin" title="Garmin" class="coming-soon">
+                    </div>
                 </div>
             </section>
 
