--- a/italy.html
+++ b/italy.html
@@ -22,16 +22,13 @@
                     <a href="dashboard.html"><i class="fas fa-chart-line"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-gift"></i> <span>Rewards</span></a>
+                    <a href="italy.html"><i class="fas fa-gift"></i> <span>Rewards</span></a>
                 </li>
                 <li>
                     <a href="health.html"><i class="fas fa-heart"></i> <span>Health</span></a>
                 </li>
                 <li class="active">
                     <a href="globe.html"><i class="fas fa-globe"></i> <span>Discover other cities</span></a>
-                </li>
-                <li>
-                    <a href="dashboard.html#settings"><i class="fas fa-cog"></i> <span>Settings</span></a>
                 </li>
             </ul>
         </div>
