--- a/italy.html
+++ b/italy.html
@@ -97,20 +97,20 @@
                 <!-- Healthy Places Section -->
                 <div class="filler-section">
                     <div class="filler-content">
-                        <h2>Healthy Places in Italy</h2>
+                        <h2>Breathe, Move & Recharge in Italy</h2>
                         <div class="filler-grid">
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1552832230-c0197dd311b5?q=80&w=1000&auto=format&fit=crop" alt="Cinque Terre" class="filler-img">
-                                <h3>Cinque Terre</h3>
+                                <img src="images/dolomites_italy.jpg" alt="Cinque Terre" class="filler-img">
+                                <h3>Dolomites Hiking</h3>
                                 <p>Scenic hiking trails connecting five colorful villages with breathtaking coastal views.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1516186366443-0744a82bdc4d?q=80&w=1000&auto=format&fit=crop" alt="Sardinia's Blue Zone" class="filler-img">
+                                <img src="images/sardinia_italy.avif" alt="Sardinia's Blue Zone" class="filler-img">
                                 <h3>Sardinia's Blue Zone</h3>
                                 <p>One of five global regions where people live exceptionally long lives due to lifestyle and diet.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1568822617270-2c1579f8dfe2?q=80&w=1000&auto=format&fit=crop" alt="Thermal Baths" class="filler-img">
+                                <img src="images/saturnia_italy.jpg" alt="Thermal Baths" class="filler-img">
                                 <h3>Saturnia Thermal Springs</h3>
                                 <p>Natural hot springs with therapeutic sulfurous waters used since Roman times.</p>
                             </div>
@@ -124,17 +124,17 @@
                         <h2>Healthy Activities in Italy</h2>
                         <div class="filler-grid">
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1528223871781-8f4c984f6164?q=80&w=1000&auto=format&fit=crop" alt="Cycling in Tuscany" class="filler-img">
+                                <img src="images/cycling_italy.jpg" alt="Cycling in Tuscany" class="filler-img">
                                 <h3>Cycling in Tuscany</h3>
                                 <p>Explore rolling hills and cypress-lined roads by bicycle for exercise with scenery.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1571997478779-2adcbbe9ab2f?q=80&w=1000&auto=format&fit=crop" alt="Walking Tours" class="filler-img">
+                                <img src="images/walking_tour_italy.webp" alt="Walking Tours" class="filler-img">
                                 <h3>Urban Walking Tours</h3>
                                 <p>Discover historic cities on foot with guided tours combining history and activity.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1544551763-77ef2d0cfc6c?q=80&w=1000&auto=format&fit=crop" alt="Yoga Retreat" class="filler-img">
+                                <img src="images/yoga_italy.jpeg" alt="Yoga Retreat" class="filler-img">
                                 <h3>Countryside Yoga Retreats</h3>
                                 <p>Practice mindfulness in peaceful settings from Umbrian farmhouses to olive groves.</p>
                             </div>
@@ -148,18 +148,18 @@
                         <h2>Healthy Restaurants in Italy</h2>
                         <div class="filler-grid">
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1533777857889-4be7c70b33f7?q=80&w=1000&auto=format&fit=crop" alt="Farm to Table" class="filler-img">
-                                <h3>Farm-to-Table Trattorias</h3>
+                                <img src="images/vero_food_italy.jpg" alt="Farm to Table" class="filler-img">
+                                <h3>Vero food and smile</h3>
                                 <p>Fresh dishes with ingredients from on-site farms or local producers.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1498579809087-ef1e558fd1da?q=80&w=1000&auto=format&fit=crop" alt="Pescatarian Options" class="filler-img">
-                                <h3>Coastal Pescatarian Options</h3>
-                                <p>Seaside restaurants with Mediterranean diet staples including fresh seafood.</p>
+                                <img src="images/aromaticus_italy.avif" alt="Pescatarian Options" class="filler-img">
+                                <h3>Aromaticus</h3>
+                                <p>Vegan restaurant serving colorful, plant-based dishes made with fresh, local ingredients.</p>
                             </div>
                             <div class="filler-card">
-                                <img src="https://images.unsplash.com/photo-1579684947550-22e945225d9a?q=80&w=1000&auto=format&fit=crop" alt="Plant-Based Options" class="filler-img">
-                                <h3>Modern Plant-Based Eateries</h3>
+                                <img src="images/fratelli_de_luca_italy.webp" alt="Plant-Based Options" class="filler-img">
+                                <h3>Fratelli de Luca</h3>
                                 <p>Contemporary restaurants reimagining Italian cuisine with local produce.</p>
                             </div>
                         </div>
