schimbat la globe si italy

--- a/italy.html
+++ b/italy.html
@@ -13,7 +13,7 @@
 	<!-- Sidebar Navigation -->
     <nav class="sidebar">
         <div class="sidebar-header">
-            <img src="https://placehold.co/150x40/e9f5db/1b4332?text=EcoMove&font=poppins" alt="EcoMove Logo">
+            <img src="https://placehold.co/150x40/e9f5db/1b4332?text=StepN'Up&font=poppins" alt="StepN'Up Logo">
             <button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
         </div>
         <div class="sidebar-menu">
