--- a/globe.html
+++ b/globe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoMove Globe - Discover Other Cities</title>
+    <title>StepN'Up Globe - Discover Other Cities</title>
     <link rel="stylesheet" href="style/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <!-- Sidebar Navigation -->
     <nav class="sidebar">
         <div class="sidebar-header">
-            <img src="https://placehold.co/150x40/e9f5db/1b4332?text=EcoMove&font=poppins" alt="EcoMove Logo">
+            <img src="https://placehold.co/150x40/e9f5db/1b4332?text=StepN'Up&font=poppins" alt="EcoMove Logo">
             <button class="sidebar-toggle"><i class="fas fa-bars"></i></button>
         </div>
         <div class="sidebar-menu">
