fixed qr code and italy animation

--- a/cluj.html
+++ b/cluj.html
@@ -87,6 +87,21 @@
     </div>
   </div>
 
+  <!-- QR Code Popup -->
+  <div id="qr-popup" class="qr-popup">
+    <div class="qr-content">
+      <span id="qr-close" class="qr-close">&times;</span>
+      <h2 class="qr-title">Scan QR Code to Claim</h2>
+      <div class="qr-offer-title" id="qr-offer-title">Offer Title</div>
+      <div class="qr-code">
+        <img id="qr-image" src="images/qr-placeholder.png" alt="QR Code">
+      </div>
+      <div class="claim-code" id="claim-code">REWARD123</div>
+      <p class="qr-instructions">Show this QR code to the staff to redeem your offer</p>
+      <p class="qr-expiry">Valid for 24 hours</p>
+    </div>
+  </div>
+
   <script type="module" src="src/cluj.js"></script>
 </body>
 </html>
