--- a/timisoara.html
+++ b/timisoara.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div class="sidebar-footer">
-      <a href="home.html"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a>
+      <a href="index.html"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a>
     </div>
   </nav>
 
